# ComplieThings

./: .gitignore  LICENSE  README.md
mlir-tutorial/: CMakeLists.txt
mlir-tutorial/Ch1/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch1/include/toy/: Lexer.h  Parser.h
mlir-tutorial/Ch2/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch2/include/toy/: Dialect.h  Ops.td
mlir-tutorial/Ch2/mlir/: Dialect.cpp  MLIRGen.cpp
mlir-tutorial/Ch3/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch3/include/toy/: Ops.td
mlir-tutorial/Ch3/parser/: AST.cpp
mlir-tutorial/Ch4/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch4/include/toy/: CMakeLists.txt  Ops.td  Passes.h
mlir-tutorial/Ch4/mlir/: MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.td
mlir-tutorial/Ch5/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch5/include/toy/: AST.h  CMakeLists.txt  Ops.td  Passes.h
mlir-tutorial/Ch5/mlir/: LowerToAffineLoops.cpp
mlir-tutorial/Ch6/: CMakeLists.txt  toyc.cpp
mlir-tutorial/Ch6/include/toy/: CMakeLists.txt  Dialect.h  MLIRGen.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
mlir-tutorial/Ch6/mlir/: Dialect.cpp  LowerToLLVM.cpp  ToyCombine.cpp
mlir-tutorial/examples/: codegen.toy  reshape.toy
